--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive grid with Bootstrap</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/hw_web_11/styles/style.css">
 </head>
 
 <body>
@@ -62,10 +62,10 @@
             <div class="col-md-3 left-column">
                 <h2>Image</h2>
                 <div class="slider-container">
-                    <img src="/images/sunset_1.jpg" alt="Зображення 1" class="slider-image active">
-                    <img src="/images/sunset_2.jpg" alt="Зображення 2" class="slider-image">
-                    <img src="/images/sunset_3.jpg" alt="Зображення 3" class="slider-image">
-                    <img src="/images/sunset_4.jpg" alt="Зображення 4" class="slider-image">
+                    <img src="/hw_web_11/images/sunset_1.jpg" alt="Image 1" class="slider-image active">
+                    <img src="/hw_web_11/images/sunset_2.jpg" alt="Image 2" class="slider-image">
+                    <img src="/hw_web_11/images/sunset_3.jpg" alt="Image 3" class="slider-image">
+                    <img src="/hw_web_11/images/sunset_4.jpg" alt="Image 4" class="slider-image">
                 </div>
             </div>
             <div class="col-md-6 main-column">
